0.1.2:
- Add method to remove all handlers

0.1.1:
- Add CtrlKey support

0.1.0:
- Initial release