@@ -5,7 +5,7 @@ import (
 	"testing"
 	"time"
 
-	"github.com/gdamore/tcell"
+	"github.com/gdamore/tcell/v2"
 )
 
 const pressTimes = 7
