@@ -1,11 +1,10 @@
 module gitlab.com/tslocum/cbind
 
-go 1.13
+go 1.15
 
 require (
-	github.com/gdamore/tcell v1.3.0
-	github.com/lucasb-eyer/go-colorful v1.0.3 // indirect
+	github.com/gdamore/tcell/v2 v2.0.0-dev
 	github.com/mattn/go-runewidth v0.0.9 // indirect
-	golang.org/x/sys v0.0.0-20200515095857-1151b9dac4a9 // indirect
-	golang.org/x/text v0.3.2 // indirect
+	golang.org/x/sys v0.0.0-20200826173525-f9321e4c35a6 // indirect
+	golang.org/x/text v0.3.3 // indirect
 )
