@@ -1,5 +1,6 @@
 0.1.2:
 - Add method to remove all handlers
+- Upgrade tcell to v2
 
 0.1.1:
 - Add CtrlKey support
